# oauth-proxies

./: .env.example  DESIGN.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/superpowers/specs/: 2026-05-31-codex-oauth-subscription-design.md
oauth_proxy/: __init__.py  app.py  auth.py  codex_auth.py  codex_client.py  config.py  grok_auth.py  grok_client.py  models.py  oauth_pkce.py  request_mapping.py  response_mapping.py  stream_mapping.py
oauth_proxy/_vendor/: __init__.py  _paths.py  anthropic_adapter.py  hermes_constants.py  utils.py
oauth_proxy/_vendor/tools/: __init__.py  lazy_deps.py  schema_sanitizer.py
tests/: conftest.py  test_auth.py  test_codex_auth.py  test_codex_endpoints.py  test_endpoints.py  test_grok.py  test_request_mapping.py  test_response_mapping.py  test_stream_mapping.py
