[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oauth-proxy"
version = "0.1.0"
description = "Local OpenAI-compatible API server that forwards to Claude using a Claude Code OAuth subscription token."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "anthropic>=0.39",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
oauth-proxy = "oauth_proxy.app:main"

[tool.setuptools.packages.find]
include = ["oauth_proxy*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
